--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -10,33 +10,25 @@
     display: flex;
     background-color: white;
     border-radius: 10px;
-    min-height: 600px;
+    height: auto;
     overflow: hidden;
 
     .left {
       flex: 1;
       background: linear-gradient(rgba(39, 11, 96, 0.5), rgba(39, 11, 96, 0.5)),
-        url("https://images.pexels.com/photos/3228727/pexels-photo-3228727.jpeg?auto=compress&cs=tinysrgb&w=1600")
-          center;
+        url("https://images.pexels.com/photos/3228727/pexels-photo-3228727.jpeg?auto=compress&cs=tinysrgb&w=1600") center;
       background-size: cover;
-      padding: 50px;
+      padding: 20px;
       display: flex;
       flex-direction: column;
       gap: 30px;
       color: white;
 
-      h1 {
-        font-size: 100px;
-        line-height: 100px;
-      }
       
-      p {
-      }
-
       span {
         font-size: 14px;
       }
-      
+
       button {
         width: 50%;
         padding: 10px;
@@ -50,33 +42,43 @@
 
     .right {
       flex: 1;
-      padding: 50px;
+      padding: 20px;
       display: flex;
       flex-direction: column;
-      gap: 50px;
+      gap: 20px;
       justify-content: center;
 
       h1 {
-      color: #555;
+        color: #555;
       }
-      
+
       form {
         display: flex;
         flex-direction: column;
         gap: 30px;
-        
+
         input {
-        border: none;
-        border-bottom: 1px solid lightgray;
-        padding: 20px 10px;
+          border: none;
+          border-bottom: 1px solid lightgray;
+          height: 40px;
+          padding-inline: 10px;
         }
-        
+
         button {
           width: 50%;
           padding: 10px;
-          border: none;
           background-color: #938eef;
           color: white;
+          font-weight: bold;
+          cursor: pointer;
+          border: 1px solid transparent;
+        }
+        button:hover {
+          width: 50%;
+          padding: 10px;
+          background-color: #fff;
+          color: #938eef;
+          border-color: #938eef;
           font-weight: bold;
           cursor: pointer;
         }
