--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,14 +1,12 @@
 $themes: (
-  light: (
-    textColor: #000,
+  light: (textColor: #000,
     bg: white,
     logo: darkblue,
     bgSoft: #f6f3f3,
     textColorSoft: #555,
     border: lightgray,
   ),
-  dark: (
-    textColor: whitesmoke,
+  dark: (textColor: whitesmoke,
     bg: #222,
     logo: white,
     bgSoft: #333,
@@ -20,20 +18,21 @@ $themes: (
 @mixin themify($themes) {
   @each $theme, $map in $themes {
     .theme-#{$theme} & {
-      $theme-map: () !global;
-      @each $key, $submap in $map {
-        $value: map-get(map-get($themes, $theme), "#{$key}");
-        $theme-map: map-merge(
-          $theme-map,
-          (
-            $key: $value,
-          )
+      $theme-map: (
         ) !global;
-      }
-      @content;
-      $theme-map: null !global;
+
+      @each $key, $submap in $map {
+        $value: map-get(map-get($themes, $theme), "#{$key}"
+        );
+      $theme-map: map-merge($theme-map,
+          ($key: $value,
+          )) !global;
     }
+
+    @content;
+    $theme-map: null !global;
   }
+}
 }
 
 @function themed($key) {
@@ -45,8 +44,35 @@ $themes: (
     @content;
   }
 }
+
 @mixin tablet {
   @media (max-width: 960px) {
     @content;
   }
+}
+
+h1 {
+  font-size: 30px;
+  line-height: 1.2;
+}
+
+input {
+  border: none;
+  border-bottom: 1px solid lightgray;
+  height: 40px;
+  padding-inline: 10px;
+
+  &:focus {
+    outline: none;
+    border-bottom-color: #938eef;
+  }
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-background-clip: text;
+    // -webkit-text-fill-color: #ffffff;
+    transition: background-color 5000s ease-in-out 0s;
+    box-shadow: inset 0 0 20px 20px #ffffff29;
 }
