--- a/client/src/components/share/share.scss
+++ b/client/src/components/share/share.scss
@@ -1,4 +1,4 @@
-@import "../../style.scss";
+@import '../../style.scss';
 
 .share {
   @include themify($themes) {
@@ -6,8 +6,8 @@
     -moz-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
     box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
     border-radius: 20px;
-    background-color: themed("bg");
-    color: themed("textColor");
+    background-color: themed('bg');
+    color: themed('textColor');
     margin-bottom: 20px;
 
     .container {
@@ -29,15 +29,61 @@
           padding: 20px 10px;
           background-color: transparent;
           width: 60%;
-          color: themed("textColor");
+          color: themed('textColor');
         }
+      }
+      .preview {
+        position: relative;
+      }
+      // .preview::before{
+      //   position: absolute;
+      //   content: "";
+      //   inset: 0;
+      //   background: rgba(0,0,0,0.3);
+      // }
+      .preview:hover::before {
+        position: absolute;
+        content: '';
+        inset: 0;
+        background: rgba(0, 0, 0, 0.3);
+      }
+      .btn-remove-overlay {
+        position: absolute;
+        inset: 50%;
+        z-index: 9;
+        width: fit-content;
+        height: fit-content;
+        transform: translate(-50%, -50%);
+        display: none;
+        cursor: pointer;
+        padding: 0;
+        border: none;
+        background: transparent;
+        svg {
+          height: auto;
+          width: 30px;
+          &:hover {
+            fill: red;
+          }
+        }
+      }
+      .preview:hover .btn-remove-overlay {
+        display: block;
+      }
+      .preview img {
+        width: 100%;
+        height: auto;
+        max-height: 200px;
+        border-radius: 10px;
+        object-fit: cover;
+        background-position: top;
       }
 
       hr {
         margin: 20px 0px;
         border: none;
         height: 0.5px;
-        background-color: themed("border");
+        background-color: themed('border');
       }
 
       .bottom {
@@ -73,6 +119,7 @@
             cursor: pointer;
             background-color: #5271ff;
             border-radius: 3px;
+            line-height: 1;
           }
         }
       }
